Add example and github and pre-commit refact
