# openapi-cscs.yml
@@ -21,231 +21,231 @@ info:
         - name: HPC app
           productId:
 servers:
-  - url: https://mp-hpc.herokuapp.com
+    - url: https://mp-hpc.herokuapp.com
 
 tags:
-  - name: FrontPage
-    description: Provides functionalities for web applications.
-  - name: System
-    description: Provides functionalities for operability of applications.
-  - name: DataSource
-    description: Provides functionalities for data fetching applications.
-  - name: DataSink
-    description: Provides functionalities for data storing applications.
-  - name: Transformation
-    description: Provides functionalities for data manipulation applications.
+    - name: FrontPage
+      description: Provides functionalities for web applications.
+    - name: System
+      description: Provides functionalities for operability of applications.
+    - name: DataSource
+      description: Provides functionalities for data fetching applications.
+    - name: DataSink
+      description: Provides functionalities for data storing applications.
+    - name: Transformation
+      description: Provides functionalities for data manipulation applications.
 
 paths:
 # Administrative paths
-  /:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - System
-      description: To check if an application is alive
-      operationId: heartbeat
-      responses:
-        '200':
-          description: Success
-          content:
-            String:
-              schema:
-                type: string
-                example: "Is Alive"
-        '404':
-          description: Not found
+    /:
+        get:
+            security:
+                - bearerAuth: []
+            tags:
+                - System
+            description: To check if an application is alive
+            operationId: heartbeat
+            responses:
+                '200':
+                    description: Success
+                    content:
+                        String:
+                            schema:
+                                type: string
+                                example: Is Alive
+                '404':
+                    description: Not found
 
-  /jobs/:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - Transformation
-      description: Get the status of a Transformation
-      operationId: getTransformationStatus
-      parameters:
-        - in: path
-          name: transformationId
-          schema:
-            type: string
-          required: true
-      responses:
-        "200":
-          description: Success
-        "404":
-          description: Not found
-  /login/:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - FrontPage
-      description: Goes to login page of the application
-      operationId: frontend
-      responses:
-        '200':
-          description: Navigates to the page
-        '404':
-          description: Not found
+    /jobs/:
+        get:
+            security:
+                - bearerAuth: []
+            tags:
+                - Transformation
+            description: Get the status of a Transformation
+            operationId: getTransformationStatus
+            parameters:
+                - in: path
+                  name: transformationId
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                '404':
+                    description: Not found
+    /login/:
+        get:
+            security:
+                - bearerAuth: []
+            tags:
+                - FrontPage
+            description: Goes to login page of the application
+            operationId: frontend
+            responses:
+                '200':
+                    description: Navigates to the page
+                '404':
+                    description: Not found
 
-  /jobs/new:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Transformation
-      description: Initialize a Transformation
-      operationId: newTransformation
-      responses:
-        '200':
-          description: Success
-          content:
-            resourceid:
-              schema:
-                type: string
-                example: "3e22541c-a95e-4443-8cdc-0866171d343b"
-        '400':
-          description: Bad Request
-          content:
-            error:
-              schema:
-                type: string
-                example: "Wrong configuration input"
-        '404':
-          description: Not found
+    /jobs/new:
+        post:
+            security:
+                - bearerAuth: []
+            tags:
+                - Transformation
+            description: Initialize a Transformation
+            operationId: newTransformation
+            responses:
+                '200':
+                    description: Success
+                    content:
+                        resourceid:
+                            schema:
+                                type: string
+                                example: 3e22541c-a95e-4443-8cdc-0866171d343b
+                '400':
+                    description: Bad Request
+                    content:
+                        error:
+                            schema:
+                                type: string
+                                example: Wrong configuration input
+                '404':
+                    description: Not found
 
-  /jobs/run/{resourceid}:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Transformation
-      description: Start execution of a Transformation
-      operationId: startTransformation
-      parameters: 
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Success
-        '404':
-          description: Not found
+    /jobs/run/{resourceid}:
+        post:
+            security:
+                - bearerAuth: []
+            tags:
+                - Transformation
+            description: Start execution of a Transformation
+            operationId: startTransformation
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                '404':
+                    description: Not found
 
-  /jobs/cancel/{resourceid}:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Transformation
-      description: cancel execution of a Transformation
-      operationId: stopTransformation
-      parameters: 
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Success
-        '404':
-          description: Not found
+    /jobs/cancel/{resourceid}:
+        post:
+            security:
+                - bearerAuth: []
+            tags:
+                - Transformation
+            description: cancel execution of a Transformation
+            operationId: stopTransformation
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                '404':
+                    description: Not found
 
-  /jobs/delete/{resourceid}:
-    post:
-      security:
-        - bearerAuth: []
-      tags:
-        - Transformation
-      description: delete a Transformation
-      operationId: deleteTransformation
-      parameters: 
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Success
-        '404':
-          description: Not found
+    /jobs/delete/{resourceid}:
+        post:
+            security:
+                - bearerAuth: []
+            tags:
+                - Transformation
+            description: delete a Transformation
+            operationId: deleteTransformation
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                '404':
+                    description: Not found
 
-  /download/{resourceid}:
-    get:
-      security:
-        - bearerAuth: []
-      tags:
-        - DataSource
-      description: Fetches a particular Dataset
-      operationId: getDataset
-      parameters:
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Success
-          content:
-            "*/*":
-              schema:
-                type: object
-        '404':
-          description: Not found
-        '400':
-          description: Bad Request
+    /download/{resourceid}:
+        get:
+            security:
+                - bearerAuth: []
+            tags:
+                - DataSource
+            description: Fetches a particular Dataset
+            operationId: getDataset
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                    content:
+                        '*/*':
+                            schema:
+                                type: object
+                '404':
+                    description: Not found
+                '400':
+                    description: Bad Request
 
-  /upload/{resourceid}:
-    put:
-      security:
-        - bearerAuth: []
-      tags:
-        - DataSink
-      description: Edit a dataset
-      operationId: updateDataset
-      parameters:
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Success
-        '404':
-          description: Not found
-        '400':
-          description: Bad Request
+    /upload/{resourceid}:
+        put:
+            security:
+                - bearerAuth: []
+            tags:
+                - DataSink
+            description: Edit a dataset
+            operationId: updateDataset
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '200':
+                    description: Success
+                '404':
+                    description: Not found
+                '400':
+                    description: Bad Request
 
-  /delete/{resourceid}:
-    delete:
-      security:
-        - bearerAuth: []
-      tags:
-        - DataSink
-      description: Delete a dataset
-      operationId: deleteDataset
-      parameters:
-        - in: path
-          name: resourceid
-          schema: 
-            type: string
-          required: true
-      responses:
-        '204':
-          description: The file is deleted.
-        '404':
-          description: Not found
- 
+    /delete/{resourceid}:
+        delete:
+            security:
+                - bearerAuth: []
+            tags:
+                - DataSink
+            description: Delete a dataset
+            operationId: deleteDataset
+            parameters:
+                - in: path
+                  name: resourceid
+                  schema:
+                      type: string
+                  required: true
+            responses:
+                '204':
+                    description: The file is deleted.
+                '404':
+                    description: Not found
+
 components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    securitySchemes:
+        bearerAuth:
+            type: http
+            scheme: bearer
+            bearerFormat: JWT
